[+] Renamed classes (it is bad maintenance to use underscores/uppercase instead of spaces/lowercase!) [+] Add gradient background

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <script src="script.js"></script>
+    
+    <p class="main-title">animated-profile-badge</p>
+    
     <div class="profile-pill">
       <img src="neon_k.jpeg" class="profile-photo">
       <p class="profile-name">Kenny Oliver&nbsp;&nbsp;&nbsp;</p><!-- &nbsp; is space for alignment -->
